出力先をtextareaに変更

--- a/en/index.html
+++ b/en/index.html
@@ -12,6 +12,8 @@
       <input id="length-input" type="number" value="10" min="1" step="1" name="length-input" required />
       <button id="generate-btn" type="button">Generate</button>
     </form>
+    <label for="output-area">Output</label>
+    <textarea name="output-area" id="output-area" readonly></textarea>
   </body>
   <script src="../main.js"></script>
 </html>
