クリップボードにコピー機能を追加

--- a/en/index.html
+++ b/en/index.html
@@ -14,6 +14,9 @@
     </form>
     <label for="output-area">Output</label>
     <textarea name="output-area" id="output-area" readonly></textarea>
+    <button id="copy-btn" type="button" data-label-before="Copy to Clipboard" data-label-after="Copied!">
+      Copy to Clipboard
+    </button>
   </body>
   <script src="../main.js"></script>
 </html>
