--- a/ja/index.html
+++ b/ja/index.html
@@ -14,6 +14,9 @@
     </form>
     <label for="output-area">出力</label>
     <textarea name="output-area" id="output-area" readonly></textarea>
+    <button id="copy-btn" type="button" data-label-before="クリップボードにコピー" data-label-after="コピーしました！">
+      クリップボードにコピー
+    </button>
   </body>
   <script src="../main.js"></script>
 </html>
